--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,9 +7,7 @@
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "erasableSyntaxOnly": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   }
