--- a/nx.json
+++ b/nx.json
@@ -36,7 +36,7 @@
     },
     "test:lib": {
       "cache": true,
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "^gen:openapi"],
       "inputs": ["default", "^production"],
       "outputs": ["{projectRoot}/coverage"]
     },
