--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "@demo-proj/root",
   "private": true,
   "packageManager": "pnpm@10.4.1",
   "type": "module",
@@ -31,19 +31,15 @@
     ]
   },
   "devDependencies": {
-    "@tanstack/config": "0.16.3",
-    "@types/node": "^22.10.6",
-    "@vitest/coverage-istanbul": "^3.0.6",
-    "eslint": "9.18.0",
-    "knip": "^5.39.2",
-    "nx": "20.4.0",
-    "premove": "^4.0.0",
-    "prettier": "^3.4.2",
-    "publint": "^0.3.2",
-    "sherif": "^1.0.2",
-    "typescript": "5.8.2",
-    "vite": "^6.1.1",
-    "vitest": "^3.0.6"
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.1",
+    "eslint": "^9.24.0",
+    "knip": "^5.50.4",
+    "nx": "20.8.0",
+    "prettier": "^3.5.3",
+    "sherif": "^1.5.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
